--- a/views/fbphotos.handlebars
+++ b/views/fbphotos.handlebars
@@ -1,42 +1,63 @@
 <style>
+.img {
+  width: 30vw;
+  height: 40vh;
+  background-position: 50% 50%;
+    margin:0px;
+    text-align:center;
+    padding:1px;
+  }
 
-img {
-	width: 30vw;
-	height: 30vh;
-	background-position: 50% 50%;
-	}
-
-body{
-	background-color: #0033CC;
+.wrapper{
+width:400px;
+float:left;
+display:inline-block;
 }
 
-
-.mycss
-{
-	font-weight:bold;
-	color:#FFFFFF;
-	letter-spacing:4pt;
-	word-spacing:-6pt;
-	font-size:47px;
-	text-align:center;
-	font-family:arial, helvetica, sans-serif;line-height:1;
+.caption {
+    position: relative;
+    overflow: hidden;
+}
+.caption__media {
+    display: block;
+    min-width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+.caption__overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    color: white;
+    transform: translateY(100%);
+    transition: transform .35s ease-out;
+}
+.caption:hover .caption__overlay {
+    transform: translateY(0);
 }
 
-
+  
+}
 </style>
 
-<body>
-<p class = "mycss">{{user.displayName}}'s Picture Collage</p>
 
-<center>
-<img src="{{picture.im1}}">
-<img src="{{picture.im2}}">
-<img src="{{picture.im3}}">
-<img src="{{picture.im4}}">
-<img src="{{picture.im5}}">
-<img src="{{picture.im6}}">
-<img src="{{picture.im7}}">
-<img src="{{picture.im8}}">
-<img src="{{picture.im9}}">
+<center class="wrapper" class="img">
+{{#each photo}}
+<article class="caption">
+    <img class="caption__media" src="{{image_url}}"/>
+    <div class="caption__overlay">
+        <h1 class="caption__overlay__title">{{from}}</h1>
+        <h2 class="caption__overlay__content">{{month}}/{{day}}/{{year}}</h2>
+        <p class="caption__overlay__content">{{caption}}</p>
+    </div>
+</article>
+{{/each}} 
 </center>
-</body>
+
+
+	
+
+
